--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.jetbrains.kotlin.android)
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -30,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -42,4 +48,23 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+    testImplementation libs.truth
+
+    // Navigation
+    implementation libs.androidx.navigation.fragment
+    implementation libs.androidx.navigation.ui
+
+    // Room
+    implementation libs.room.runtime
+    kapt libs.room.compiler
+    androidTestImplementation libs.room.testing
+
+    // Retrofit
+    implementation libs.retrofit
+    implementation libs.retrofit.gson
+
+    // Dagger hilt
+    implementation libs.dagger.hilt
+    implementation libs.dagger.hilt.compiler
+    kapt libs.dagger.hilt.compiler
 }
