--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        def nav_version = "2.7.7"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.49'
+    }
+}
 plugins {
 alias(libs.plugins.android.application) apply false
     alias(libs.plugins.jetbrains.kotlin.android) apply false
+    id 'com.google.dagger.hilt.android' version '2.49' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
 }
