--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,11 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
+navVersion = "2.7.7"
+roomVersion = "2.6.1"
+retrofitVersion = "2.11.0"
+hiltVersion = "2.49"
+datastoreVersion = "1.1.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -19,8 +24,24 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref="navVersion"}
+androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref="navVersion"}
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomVersion"}
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion"}
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion"}
+room-testing = { group = "androidx.room", name = "room-testing", version.ref = "roomVersion"}
+retrofit = { group = "com.square.retrofit2", name = "retrofit", version.ref = "retrofitVersion"}
+retrofit-gson = { group = "com.square.retrofit2", name = "converter-gson", version.ref = "retrofitVersion"}
+dagger-hilt = { group = "com.google.dagger", name= "hilt-android", version.ref = "hiltVersion"}
+dagger-hilt-compiler = { group = "com.google.dagger", name= "hilt-compiler", version.ref = "hiltVersion"}
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.0"}
+androidx-dataStore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastoreVersion"}
+truth = { group = "com.google.truth", name = "truth", version = "1.1.4"}
+
+# androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-navigation-safe-arg = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navVersion" }
 
