--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     alias(libs.plugins.jetbrains.kotlin.android)
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -34,7 +34,8 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        dataBinding = true
+        viewBinding true
+        dataBinding true
     }
 }
 
@@ -49,6 +50,8 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
     testImplementation libs.truth
+    implementation libs.androidx.lifecycle.viewmodel
+    implementation libs.androidx.lifecycle.runtime
 
     // Navigation
     implementation libs.androidx.navigation.fragment
@@ -56,15 +59,20 @@ dependencies {
 
     // Room
     implementation libs.room.runtime
+    implementation libs.room.ktx
     kapt libs.room.compiler
     androidTestImplementation libs.room.testing
 
     // Retrofit
     implementation libs.retrofit
     implementation libs.retrofit.gson
+    implementation libs.kotlinx.serialization.json
 
-    // Dagger hilt
     implementation libs.dagger.hilt
-    implementation libs.dagger.hilt.compiler
     kapt libs.dagger.hilt.compiler
+    implementation libs.dagger.hilt.navigation
+
+    // Datastore
+    implementation libs.androidx.dataStore
 }
+
