--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.1"
+hiltLifecycleViewmodel = "1.0.0-alpha03"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -14,9 +15,11 @@ roomVersion = "2.6.1"
 retrofitVersion = "2.11.0"
 hiltVersion = "2.49"
 datastoreVersion = "1.1.1"
+kapt-version = "1.9.20"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-lifecycle-viewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -30,18 +33,25 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion"}
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion"}
 room-testing = { group = "androidx.room", name = "room-testing", version.ref = "roomVersion"}
-retrofit = { group = "com.square.retrofit2", name = "retrofit", version.ref = "retrofitVersion"}
-retrofit-gson = { group = "com.square.retrofit2", name = "converter-gson", version.ref = "retrofitVersion"}
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion"}
+retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitVersion"}
+
+#Dagger Hilt
 dagger-hilt = { group = "com.google.dagger", name= "hilt-android", version.ref = "hiltVersion"}
 dagger-hilt-compiler = { group = "com.google.dagger", name= "hilt-compiler", version.ref = "hiltVersion"}
+dagger-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-fragment",version = "1.2.0"}
+
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.0"}
 androidx-dataStore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastoreVersion"}
 truth = { group = "com.google.truth", name = "truth", version = "1.1.4"}
-
+androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version = "2.8.3"}
+androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime", version = "2.8.3"}
 # androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-navigation-safe-arg = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navVersion" }
+dagger-hilt-plugin = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
+
 
