ISTAKIBI-6952 Android Eğitim ve Öğrenimi + Bir tane dao testi yazdım. Test seçilen filmin favorilere eklenip eklenmediğini test ediyor.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     testImplementation libs.truth
     implementation libs.androidx.lifecycle.viewmodel
     implementation libs.androidx.lifecycle.runtime
+    implementation libs.android.arch.core
 
     // Navigation
     implementation libs.androidx.navigation.fragment
