--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,13 +21,18 @@ youtubeVideoPlayer = "0.28"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
+# Test
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+truth = { group = "com.google.truth", name = "truth", version = "1.1.4"}
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+android-arch-core = { group = "androidx.arch.core", name = "core-testing",version = "2.2.0"}
+org-hamcrest = { group = "org.hamcrest", name = "hamcrest", version = "2.2"}
 
 # Navigation
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref="navVersion"}
@@ -49,7 +54,6 @@ dagger-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-frag
 
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.0"}
 androidx-dataStore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastoreVersion"}
-truth = { group = "com.google.truth", name = "truth", version = "1.1.4"}
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version = "2.8.3"}
 androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime", version = "2.8.3"}
 androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navVersion"}
