--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,18 @@
 [versions]
 agp = "8.5.1"
-kotlin = "2.0.0"
+kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+kotlinxCoroutinesTest = "1.6.4"
 material = "1.12.0"
 activity = "1.9.1"
 constraintlayout = "2.1.4"
+mockitoCore = "4.8.0"
+mockitoInline = "4.8.0"
+mockk = "1.13.12"
 navVersion = "2.7.7"
 roomVersion = "2.6.1"
 retrofitVersion = "2.11.0"
@@ -17,10 +21,12 @@ datastoreVersion = "1.1.1"
 glideVersion = "4.16.0"
 flexBoxVersion = "3.0.0"
 youtubeVideoPlayer = "0.28"
+coreKtxVersion = "1.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
@@ -28,6 +34,9 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 # Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockitoCore" }
+mockito-inline = { group = "org.mockito", name = "mockito-inline", version.ref = "mockitoInline" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 truth = { group = "com.google.truth", name = "truth", version = "1.1.4"}
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 android-arch-core = { group = "androidx.arch.core", name = "core-testing",version = "2.2.0"}
@@ -64,6 +73,7 @@ flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref 
 
 # YouteVideoPlayer
 android-youtube-player = { group = "com.pierfrancescosoffritti.androidyoutubeplayer", name = "chromecast-sender", version.ref = "youtubeVideoPlayer"}
+core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
